PDF: Add Chapter 1 (2?2)

--- a/PDF/my_folder/chapter1.tex
+++ b/PDF/my_folder/chapter1.tex
@@ -3,9 +3,9 @@
 % не рекомендуется использовать отдельную section <<введение>> после лета 2020 года
 %\section{Введение. Сложносоставное название первого параграфа первой главы для~демонстрации переноса слов в содержании} \label{ch1:intro}
 
+В данной главе приводится основная терминологеская и теоретическая база, на которой будут строиться дальнейшие главы. Рассматриваются основные понятия криптографии и интернета вещей. Описывается уровневая модель систем интернета вещей, выделяется каждый уровень и атаки на него.
 
 \section{Криптографические алгоритмы: основные понятия} \label{ch1:sec1}
-
 
 \subsection{Информация и криптография} % ~ нужен, чтобы избавиться от висячего предлога (союза) в конце строки
 
@@ -118,94 +118,97 @@
 	\item Медленные, используются для хэширования паролей. Должны потреблять много ресурсов и быть очень стойкими. Примеры: bcrypt и scrypt, новая – Argon2.
 \end{itemize}
 
+\section{Интернет вещей} \label{ch1:sec2}
 
+\subsection{Основные понятия} % ~ нужен, чтобы избавиться от висячего предлога (союза) в конце строки
 
+Сэмюэл Грингард (Samuel Greengard) – журналист, специализируется на новых технологиях.  Директор по маркетингу во многих технологических и бизнес-изданиях, бывший президент Американского общества журналистов. В области IoT известен главным образом книгой \cite{src19}. Далее в этом разделе приводятся избранные положения этой работы.
 
+Подключаемые устройства – устройства, которые обмениваются данными по обычному интернет-соединению и получают дополнительные преимущества при подключении, например, через закрытую или частную сеть. Подключаемые устройства необязательно подсоединяются именно к Интернету вещей, но это происходит все чаще.
 
+Радиочастотная идентификация (RFID) – это основной инструмент, который позволяет устройствам стать подключаемыми. Эта технология автоматической идентификации основана на считывании или записи данных, хранящихся в RFID-метках. RFID-метки могут быть как активными (с собственным источником питания), так и пассивными (им не требуется источник питания). И те, и другие позволяют считывателям автоматически получать сигнал и данные с меток. При этом метка должна находиться не дальше определенного допустимого расстояния.
 
+Пассивные радиочастотные метки особенно востребованы благодаря низкой стоимости, долговечности и отсутствию необходимости в постоянном электропитании, они получают питание от ближайшего считывателя. Они могут быть встроены в наклейки для удобства использования или имплантированы под кожу (например, продукт VeriChip \cite{src16}). Стоимость определяется мощностью считывающего устройства. Чем больше его мощность, тем меньше требования к размеру и качеству метки, что, в свою очередь, определяет более низкую стоимость \cite{src17}. Уже в 2004 году некоторые метки стоили всего 5 центов \cite{src18}.
 
+Промышленный Интернет – оборудование и аппаратура, оборудованные датчиками. Датчики позволяют получать данные с самых различных устройств унифицированным образом. Затем данные со считывающих устройств могут быть собраны и централизованно обработаны. 
 
-Одиночные формулы оформляют в окружении \texttt{equation}, например, как указано в следующей одиночной нумерованной формуле:
-%
-%
-\begin{equation}% лучше не оставлять пропущенную строку (\par) перед окружениями для избежания лишних отсупов в pdf
-\label{eq:Pi-ch1} % eq - equations, далее название, ch поставлено для избежания дублирования
-\pi \approx 3,141.
-\end{equation}
-%
-%
-\begin{figure}[ht!] 
-	\center
-	\includegraphics [scale=0.27] {my_folder/images//spbpu_hydrotower}
-	\caption{Вид на гидробашню СПбПУ \cite{spbpu-gallery}} 
-	\label{fig:spbpu_hydrotower}  
-\end{figure}
-%
-%
-%\begin{table} [htbp]% Пример оформления таблицы
-%	\centering\small
-%	\caption{Представление данных для сквозного примера по ВКР \cite{Peskov2004}}%
-%	\label{tab:ToyCompare}		
-%		\begin{tabular}{|l|l|l|l|l|l|}
-%			\hline
-%			$G$&$m_1$&$m_2$&$m_3$&$m_4$&$K$\\
-%			\hline
-%			$g_1$&0&1&1&0&1\\ \hline
-%			$g_2$&1&2&0&1&1\\ \hline
-%			$g_3$&0&1&0&1&1\\ \hline
-%			$g_4$&1&2&1&0&2\\ \hline
-%			$g_5$&1&1&0&1&2\\ \hline
-%			$g_6$&1&1&1&2&2\\ \hline		
-%		\end{tabular}	
-%	\normalsize% возвращаем шрифт к нормальному
-%\end{table}
+Таким образом, возможность сделать большинство устройств подключаемыми позволяет централизованно (в смысле единого канала, Интернета) управлять практически всей техникой. В результате возникает \textit{Интернет всего} (этот термин введен компанией Cisco). Интернет всего позволяет значительно увеличить автоматизацию за счет упрощения взаимодействия отдельных устройств, модулей и систем. В конечном счете это повышает управляемость системой и, если необходимо, целым кластером систем.
 
+В книге упоминается «парадокс автоматизации»: по мере развития автоматизированных систем вероятность аварии или сбоя снижается, однако степень тяжести потенциальной опасности во много раз повышается. Это создает дополнительные требования к персоналу и пользователям таких систем. Кроме того, возникает психологический эффект расслабления, когда человек целиком полагается на технику.
 
-% \firef{} от figure reference
-% \taref{} от table reference
-% \eqref{} от equation reference
+Автор отмечает дилемму, стоящую перед разработчиками. Создание функциональных интерфейсов и средств управления делают устройства (и, если посмотреть шире, системы) удобнее, но также делают их мишенью для атак. И если прямого доступа к управлению отдельными модулями нет (или нет соответствующих навыков у пользователя или обслуживающего персонала), неисправность или уязвимость не могут быть обнаружены до тех пор, пока проблема не проявится сама, причинив немалый ущерб. Следовательно, разработчики и производители должны находить новые способы обеспечения безопасности как системы в целом, так и отдельных модулей. При этом система защиты должна иметь максимально простой интерфейс управления или, еще лучше, вовсе не требовать управления.
 
-На \firef{fig:spbpu_hydrotower} изображена гидробашня СПбПУ, а в \taref{tab:ToyCompare} приведены данные, на примере которых коротко и наглядно будет изложена суть ВКР.
+\subsection{Уровневая модель IoT и проблемы безопасности} % ~ нужен, чтобы избавиться от висячего предлога (союза) в конце строки
 
+Стоит отметить хорошую работу \cite{src20}, посвященную обзору элементов сети IoT, ее «слоистой» архитектуры, а также актуальных проблем безопасности. Этот раздел написан в основном по материалам данной работы.
 
-\section{Название параграфа} \label{ch1:sec2} 
+Для идентификации устройств используются адреса IPv4 и IPv6, для именования может использоваться система ucode. Сбор информации осуществляется, например, с помощью RFID-меток, носимых устройства. Для сетевого взаимодействия – основного компонента IoT – используются такие технологии, как RFID, NFC, Bluetooth, Wi-Fi, LTE. Обработка информации включает в себя отбор информации и затем необходимые вычисления. Примеры аппаратных платформ: Arduino, Raspberry Pi, Intel Galileo. Среди ОС можно назвать TinyOS, LiteOS, Android. Для обеспечения общей семантики используются унифицированные модели представления данных RDF, OWL, EXI.
 
+Приложения IoT предоставляют следующие 4 типа услуг пользователю:
+\begin{itemize}
+	\item распределенное распознавание объектов;
+	\item сбор, обработка и распределенное хранение информации;
+	\item распределенная решающая (управляющая) система;
+	\item контроль и динамическая корректировка работы различных устройств.
+\end{itemize}
 
+Архитектура сети IoT состоит из нескольких уровней. Базовый трехуровневый вариант отражает главные черты архитектуры. Он состоит из следующих уровней:
+\begin{itemize}
+	\item прикладной уровень (application layer);
+	\item сетевой уровень (network layer, transmission layer);
+	\item сенсорный уровень (perception layer, sensor layer). 	
+\end{itemize}
 
-Формулы могут быть размещены в несколько строк. Чтобы выставить номер формулы напротив средней строки, используйте окружение \verb|multlined| из пакета \verb|mathtools| следующим образом \cite{Ganter1999}:
-%
-\begin{equation} 
-\label{eq:fConcept-order-ch1}
-\begin{multlined}
-(A_1,B_1)\leq (A_2,B_2)\; \Leftrightarrow \\  \Leftrightarrow\; A_1\subseteq A_2\; \Leftrightarrow \\ \Leftrightarrow\; B_2\subseteq B_1. 
-\end{multlined}
-\end{equation}
+Сенсорный уровень. На этом уровне осуществляется идентификация «вещей» и сбор поставляемых ими данных. Данные могут быть самыми разными, в зависимости от конкретной области применения: местоположение, температура, вибрация и другие. Этот уровень зачастую является основной целью злоумышленников. См, например, статью \cite{src21}. Основные атаки:
+\begin{itemize}
+	\item Подслушивание (eavesdropping) – перехват информации. Для таких атак уязвимы данные, передаваемые в открытом или слабо зашифрованном виде.
+	\item Захват узла (node capture) – захват контроля над важным узлом передачи или временного хранения данных. Может привести к утечке сразу большого количества информации, в том числе ключей шифрования.
+	\item Введение фальшивого узла (fake and malicious node) – добавление нового узла в систему. Эта атака направлена на прекращение передачи реальной информации и передачу вместо нее фальшивой. Кроме того, узел может пытаться получить контроль над другими узлами или заставить их повысить энергопотребление для причинения максимального урона сети.
+	\item Атака повторного воспроизведения (атака повторением пакетов, replay attack, playback attack) – злоумышленник собирает информацию, передаваемую от отправителя к получателю, и фиксирует реакцию получателя. После чего позднее отправляет такую же информацию с целью заставить получателя выполнить желаемые действия. Эта атака весьма
+	\item Атака по времени (timing attack) – злоумышленники фиксирует время реакции системы на различные запросы, чтобы получить сведения о ее устройстве и обнаружить потенциальные уязвимости. Может быть также направлена на одно устройство, в этом случае наиболее удобны слабые устройства (для них различие во времени зафиксировать легче).
+\end{itemize}
 
+Сетевой уровень. Он выступает как промежуточное звено между сенсорным уровнем и прикладным уровнем. Занимается передачей информации, а также отвечает за взаимодействие различных устройств и сетей между собой. Он уязвим для следующих атак:
+\begin{itemize}
+	\item DoS-атака – создание условий для прекращения или затруднения доступа пользователей к вычислительной сети. Обычно это достигается путем искусственного наводнения сети большим количеством запросов.
+	\item Атака посредника (man in the middle, MITM) – ретрансляция и изменение связи между узлами, которые считают, что общаются друг с другом. Является серьезной угрозой, так как атака может быть осуществлена в реальном времени.
+	\item Атака на хранилище (storage attack) – как при централизованном, так и при распределенном способе хранения информации, она может быть украдена, подделана или удалена.
+	\item Эксплойт-атака (exploit attack) – внедрение фрагментов кода, использующих уязвимости в системе безопасности, в приложении или в аппаратном обеспечении. Целью атаки является получение над контролем системы и кража информации, также возможно нарушение функционирования системы.
+\end{itemize}
 
-Используя команду \verb|\labelcref| из пакета \verb|cleveref|, допустимо следующим образом оформлять ссылку на несколько формул:
-(\labelcref{eq:Pi-ch1,eq:fConcept-order-ch1}).
-%
-%
-\input{my_folder/tex/fig-spbpu-whitehall-three-in-one} % пример подключения 3х иллюстрации в одном рисунке
+На прикладном уровне находятся все приложения, использующие технологию IoT. Атаки на данный уровень часто определяются конкретным назначением сети. Примеры атак:
+\begin{itemize}
+	\item Межсайтовый скриптинг (cross-site scripting) – введение инъекции на стороне клиента. Эта атака позволяет злоумышленнику полностью изменить содержимое приложения в своих целях, а также украсть информацию.
+	\item Атака вредоносного кода (malicious code attack) – вредоносный код в любой части приложения. Данные атаки часто предотвращаются антивирусом.
+	\item Атаки на данные – в случае большого количества пользователей, в некоторых случаях данные могут передаваться в слабо защищенном виде, что может быть использовано злоумышленником.
+\end{itemize}
 
-Пример ссылок \cite{Article,Book,Booklet,Conference,Inbook,Incollection,Manual,Mastersthesis,Misc,Phdthesis,Proceedings,Techreport,Unpublished,badiou:briefings}, а также ссылок с указанием страниц, на котором отображены номера страниц  \cite[с.~96]{Naidenova2017} или в виде мультицитаты на несколько источников \cites[с.~96]{Naidenova2017}[с.~46]{Ganter1999}. Часть библиографических записей носит иллюстративный характер и не имеет отношения к реальной литературе. 
+С развитием технологии IoT, распространение получает более сложная, пятиуровневая модель. Модель выглядит следующим образом.
+\begin{itemize}
+	\item уровень бизнес-логики (business level);
+	\item прикладной уровень (application layer);
+	\item уровень обработки (processing layer);
+	\item транспортный уровень (transport layer);
+	\item сенсорный уровень (perception layer, sensor layer). 
+\end{itemize}
 
+Уровень обработки собирает, отбирает и обрабатывает информацию, полученную от транспортного уровня. Возможные атаки:
+\begin{itemize}
+	\item Атака истощения ресурсов (resource exhaustion attack) – атака, в результате которой происходит не «зависание» и перегрузка устройств, как при DoS-атаке, а сбои программного или аппаратного обеспечения системы. Благодаря распределенной природе системы интернета вещей, эти атаки не слишком опасны.
+	\item Вредоносное ПО – атака на конфиденциальную информацию. Вирусы, шпионское ПО, реклама, троянские программы и черви. 
+\end{itemize}
 
-
-%\FloatBarrier % заставить рисунки и другие подвижные (float) элементы остановиться
+Уровень бизнес-логики занимается управлением всей системой. Устанавливает политики приложений, конфиденциальности данных, обработки данных. Уязвимость этого слоя позволит злоумышленникам «легально» использовать приложения в обход бизнес-логики. Возможные варианты атак:
+\begin{itemize}
+	\item Атака на бизнес-логику (business logic attack) – использование ошибок программирования бизнес-уровня. Позволяет изменить взаимодействие между пользователем и БД приложения в сторону, выгодную злоумышленнику. Это может быть достигнуто при использовании уязвимостей кода, слабостей процедур валидации при восстановлении пароля и введении входных данных, или слабостей шифрования.
+	\item Атака нулевого дня (zero-day attack) – использование уязвимостей системы безопасности, которые ранее были неизвестны.
+\end{itemize}
 
 \section{Выводы} \label{ch1:conclusion}
 
-Текст выводов по главе \thechapter.
+В данной главе была приведена основная терминологеская и теоретическая база, на которой будут строиться дальнейшие главы. Рассмотрены основные понятия криптографии и интернета вещей. Описана уровневая модель систем интернета вещей, рассмотрен каждый уровень и атаки на него.
 
-Кроме названия параграфа <<выводы>> можно использовать (единообразно по всем главам) следующие подходы к именованию последних разделов с результатами по главам:
-\begin{itemize}
-	\item <<выводы по главе N>>, где N --- номер соответствующей главы;
-	\item <<резюме>>;
-	\item <<резюме по главе N>>, где N --- номер соответствующей главы.
-\end{itemize}
-
-Параграф с изложением выводов по главе \textit{является обязательным}.
+\newpage
 
 %% Вспомогательные команды - Additional commands
 %
