--- a/PDF/my_folder/my_biblio.bib
+++ b/PDF/my_folder/my_biblio.bib
@@ -19,7 +19,6 @@
 }
 
 
-
 @Online{src1,
 	title= {State of the IoT 2018: Number of IoT devices now at 7B – Market accelerating},
 	url =          {https://iot-analytics.com/state-of-the-iot-update-q1-q2-2018-number-of-iot-devices-now-7b/},
@@ -149,7 +148,62 @@
 	hyphenation  = {english}
 }
 
+@Online{src16,
+	title= { VeriChip RFID Implants in Mexican Attorney General's Office Overstated },
+	url =          { https://www.webcitation.org/5wa3VneDo?url=http://www.spychips.com/press-releases/mexican-implant-correction.html },
+	urldate =      {2020-06-10},
+	hyphenation =     {english}
+}
 
+@BOOK{src17,
+	author    = { Маниш Бхуптани and Шахрам Морадпур }, 
+	translator = { Н. Троицкий },
+	title     = { RFID-технологии на службе вашего бизнеса  },
+	publisher = { Альпина Паблишер },
+	year      = { 2007 },
+	address   = { Москва },
+	pagetotal = { 290 },
+	isbn      = { 5961404218 },
+	hyphenation  = { russian }
+}
+
+@Online{src18,
+	title= { The 5-Cent RFID Tag },
+	url =          { https://www.rfidjournal.com/the-5-cent-rfid-tag },
+	urldate =      {2020-06-10},
+	hyphenation =     {english}
+}
+
+@BOOK{src19,
+	author    = { Сэмюэл Грингард }, 
+	translator = { М. Трощенко },
+	title     = { Интернет вещей: Будущее уже здесь },
+	publisher = { Альпина Паблишер },
+	year      = { 2017 },
+	address   = { Москва },
+	pagetotal = { 188 },
+	isbn      = { 9785961464726 },
+	hyphenation  = { russian }
+}
+
+
+@article{src20,
+	author  = { Muhammad Burhan and Rana Asif Rehman and Byung-Seo Kim and Bilal Khan }, 
+	title   = { IoT Elements, Layered Architectures and Security Issues: A Comprehensive Survey },
+	journal = { Sensors  },
+	year    = { 2018 },
+	month   = { 8 },
+	hyphenation  = { english }
+}
+
+@inproceedings{src21,
+	author = { Thanassis Giannetsos and Tassos Dimitriou and Neeli Prasad },
+	year = {2010},
+	month = {04},
+	pages = {},
+	title = {Weaponizing Wireless Networks: An Attack Tool for Launching Attacks against Sensor Networks},
+	hyphenation  = { english }
+}
 
 
 
